@@ -140,7 +140,7 @@ dfhack_plugin(pathable pathable.cpp LINK_LIBRARIES lua)
 #dfhack_plugin(petcapRemover petcapRemover.cpp)
 #dfhack_plugin(plants plants.cpp)
 dfhack_plugin(probe probe.cpp)
-#dfhack_plugin(prospector prospector.cpp LINK_LIBRARIES lua)
+dfhack_plugin(prospector prospector.cpp LINK_LIBRARIES lua)
 #dfhack_plugin(power-meter power-meter.cpp LINK_LIBRARIES lua)
 dfhack_plugin(regrass regrass.cpp)
 add_subdirectory(remotefortressreader)
